--- a/src/index.css
+++ b/src/index.css
@@ -287,8 +287,8 @@ body {
   margin-bottom: 0.8rem;
   font-weight: 600;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
   gap: 2.4rem;
 }
 
